--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react-dom": "19.1.0",
     "react-native": "0.81.5",
     "react-native-appwrite": "^0.17.1",
+    "react-native-dotenv": "^3.4.11",
     "react-native-reanimated": "~4.1.1",
     "react-native-safe-area-context": "~5.6.0",
     "react-native-web": "^0.21.0",
@@ -29,6 +30,7 @@
     "eslint": "^9.25.1",
     "eslint-config-expo": "~10.0.0",
     "eslint-config-prettier": "^10.1.2",
+    "expo-cli": "^6.3.12",
     "prettier": "^3.2.5",
     "prettier-plugin-tailwindcss": "^0.5.11",
     "tailwindcss": "^3.4.0",
