--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "web": "expo start --web"
   },
   "dependencies": {
-    "expo": "^54.0.0",
+    "expo": "^54.0.20",
     "expo-status-bar": "~3.0.8",
     "nativewind": "latest",
     "react": "19.1.0",
@@ -27,6 +27,8 @@
   "devDependencies": {
     "@babel/core": "^7.20.0",
     "@types/react": "~19.1.10",
+    "@types/react-native": "^0.72.8",
+    "babel-plugin-transform-inline-environment-variables": "^0.4.4",
     "eslint": "^9.25.1",
     "eslint-config-expo": "~10.0.0",
     "eslint-config-prettier": "^10.1.2",
